fixing spacing errors and added forum

--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -19,7 +19,6 @@
 }
 
 
-
 .text{
  padding: 0.5rem 0;
  font-size: 15px;
@@ -69,7 +68,7 @@
 }
 
 .col1-text{
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 600;
 }
 
@@ -79,15 +78,15 @@
 }
 
 .col1 .container {
-    font-size: 12px;
+    font-size: 18px;
     text-align: center;
+    padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     border-radius: 1rem;
     margin: 10px;
     color: #fafafa;
     background-color: #DBA228;
-    padding: 20px;
     
 }
 
@@ -125,4 +124,14 @@
 
 .section4 .col2 p{
     font-size: 12px;
+}
+
+@media (max-width: 768px){
+    .section1{
+        display:block;
+    }
+
+    .section2{
+        display: block;
+    }
 }
